change target framwork

--- a/Mab.StringLibrary/Mab.StringLibrary.csproj
+++ b/Mab.StringLibrary/Mab.StringLibrary.csproj
@@ -5,6 +5,9 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
