--- a/Mab.StringLibrary/Mab.StringLibrary.csproj
+++ b/Mab.StringLibrary/Mab.StringLibrary.csproj
@@ -8,6 +8,16 @@
     <AssemblyVersion>1.0.1</AssemblyVersion>
     <FileVersion>1.0.1</FileVersion>
     <Version>1.0.1</Version>
+    <PackageProjectUrl>https://github.com/mabdollahiasl/Mab.StringLibrary</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>string similarity, encode , decode</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
